--- a/requirements.txt
+++ b/requirements.txt
@@ -1,83 +1,16 @@
-# Core Web Framework
-fastapi==0.104.1
-uvicorn==0.24.0
-starlette==0.27.0
+fastapi
+uvicorn
+aiohttp
+requests
+pandas
+matplotlib>=3.10.7
+seaborn>=0.13.2
+PyPDF2
+beautifulsoup4
+playwright
+python-dotenv
+plotly
+scikit-learn
+numpy
+lxml
 
-# HTTP Client
-httpx==0.25.0
-requests==2.31.0
-
-# Environment Management
-python-dotenv==1.0.0
-python-multipart==0.0.6
-
-# Data Processing & Analysis
-pandas==2.1.3
-numpy==1.24.3
-scipy==1.11.4
-scikit-learn==1.3.2
-
-# Data Format Support
-openpyxl==3.1.2
-xlrd==2.0.1
-csvvalidator==1.3.0
-
-# Browser Automation
-playwright==1.40.0
-pyppeteer==1.0.2
-
-# PDF Processing
-PyPDF2==3.0.1
-pdfplumber==0.10.3
-pypdf==3.17.1
-
-# Image & File Processing
-Pillow==10.0.1
-imageio==2.33.1
-
-# Text & Content Processing
-beautifulsoup4==4.12.2
-lxml==4.9.3
-markdown==3.5.1
-html2text==2020.1.16
-
-# Encoding & Serialization
-base64-encoder==1.0.0
-pyyaml==6.0.1
-
-# Mathematical & Scientific Computing
-scipy==1.11.4
-statsmodels==0.14.0
-sympy==1.12
-
-# Data Validation
-pydantic==2.4.2
-jsonschema==4.20.0
-
-# Utilities
-click==8.1.7
-typer==0.9.0
-tqdm==4.66.1
-
-# Async Support
-asyncio-contextmanager==1.0.0
-aiofiles==23.2.1
-
-# Logging & Debugging
-loguru==0.7.2
-structlog==23.2.0
-
-# Testing (Optional but recommended)
-pytest==7.4.3
-pytest-asyncio==0.21.1
-httpx-mock==0.30.0
-
-# Code Quality (Optional)
-black==23.12.0
-flake8==6.1.0
-pylint==3.0.3
-
-# Type Checking (Optional)
-mypy==1.7.1
-types-requests==2.31.0.10
-types-beautifulsoup4==4.9.11.20240106
