--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ LLM_MAX_TOKENS=4000
 
 # Other config
 STUDENT_EMAIL=21f3002378@ds.study.iitm.ac.in
-STUDENT_SECRET=elephant
+STUDENT_SECRET=lolipop
 # FastAPI/Uvicorn Configuration
 FASTAPI_HOST=0.0.0.0
 FASTAPI_PORT=8000
